# Admin-Meta-Agents

./: .env.example  .gitignore  Admin-Meta-Agents  Dockerfile  Healthcare Policy agent  Makefile  README.md  docker-compose.yml  economic policy agent  main.py  pyproject.toml  requirements.txt  setup.py
admin_meta_agents/: __init__.py  agents.py  base.py  examples.py  meta_agents.py  state.py  workflow.py
admin_meta_agents/agents/: __init__.py  crisis.py  economic.py  healthcare.py
examples/: basic_usage.py  crisis_scenario.py  policy_workflow.py
examples/legacy/: README.md  call_tool.py  crisis_response_agent.py
scripts/: deploy.sh
tests/: test_agents.py  test_examples.py  test_state.py  test_workflow.py
